tests/ifcc-test-output/testfiles-1-3/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: redefinition of ‘a’
    3 |     int a = 30;
      |         ^
input.c:2:9: note: previous definition of ‘a’ was here
    2 |     int a = 42;
      |         ^

exit status: 1
